--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node dist/server.js",
+    "build": "tsc -p tsconfig.json --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -19,5 +20,9 @@
     "moment": "^2.24.0",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5"
+  },
+  "devDependencies": {
+    "@types/express": "4.16.1",
+    "ts-node": "8.0.3"
   }
 }
