--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongodb": "^3.1.12",
-    "mongoose": "^5.4.5"
+    "mongoose": "^5.4.5",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "4.16.1",
