--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node dist/server/server.js",
     "build": "tsc -p tsconfig.json",
+    "html": "copyfiles **/*.html **/*.css dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": ""
   },
@@ -18,7 +19,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/express": "4.16.1",
+    "copyfiles": "^2.1.1",
     "ts-node": "8.0.3"
   }
 }
