a lot of changes....

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,22 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2015",
+    "target": "es2018",
     "lib": ["es2018"],
     "outDir": "dist",
-    "baseUrl": "."
-    
+    "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false,
+    "noImplicitAny": false,
+    "skipLibCheck": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "typings"
   ]
 }
+
