--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "tsd": "^0.7.4"
   },
   "devDependencies": {
     "@types/express": "4.16.1",
+    "@types/jquery": "^3.3.31",
     "copyfiles": "^2.1.1",
     "ts-node": "8.0.3"
   }
